# orbit-cursor

./: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind-merge.config.ts  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.workspace.ts
.storybook/: main.ts  preview-head.html  preview.ts  styles.css  vitest.setup.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  store.rs
src-tauri/src/global_inputs/: service.rs
src-tauri/src/permissions/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/system_tray/: service.rs
src-tauri/src/windows/: commands.rs  service.rs
src/api/: permissions.ts
src/app/: index.tsx  provider.tsx  router.tsx
src/app/pages/: listbox-standalone.tsx  start-recording-dock.tsx
src/components/button/: button.stories.tsx  button.tsx
src/components/keyboard/: keyboard.stories.tsx  keyboard.tsx
src/components/listbox/: listbox.stories.tsx  listbox.tsx
src/components/listbox-item/: listbox-item.tsx
src/components/overlay/: overlay.stories.tsx  overlay.tsx
src/components/radio-group/: radio-group.tsx
src/components/select/: select.stories.tsx  select.tsx
src/components/separator/: separator.stories.tsx  separator.tsx
src/components/sparkles/: sparkles.stories.tsx  sparkles.tsx
src/components/switch/: switch.stories.tsx  switch.tsx
src/lib/: math.ts  styling.ts
src/stores/: permissions.store.ts  standalone-listbox.store.ts
src/types/: api.ts  events.ts
(+15 files in other folders)
